Add tests for clicker service